--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_plugin_pdf_viewer: ^1.0.7
-  file_picker: ^1.13.0+1
+  image_picker: ^0.6.7+4
+  image_pickers: ^1.0.8+7
+
   firebase_storage: ^3.1.6
   firebase_database: ^3.1.1
   cupertino_icons: ^0.1.3
+  pdf: ^1.11.0
+  flutter_full_pdf_viewer: ^1.0.6
+  path_provider: ^1.6.11
 
 dev_dependencies:
   flutter_test:
